<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_item_name"/>
        <EditText
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_type"/>
        <EditText
            android:id="@+id/item_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_item_price"/>
        <EditText
            android:id="@+id/item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_summary"/>
        <EditText
            android:id="@+id/item_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_rating"/>
        <EditText
            android:id="@+id/item_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rating_hint"/>

        <Button
            android:id="@+id/submit_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="Add" />

        <Button
            android:id="@+id/cancel_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="Cancel"/>


    </LinearLayout>
</FrameLayout>